# misc_utils

./: .gitignore  Cargo.toml  LICENSE.md  README.md  captain-definition  miscutils.sublime-project
.github/workflows/: jobs.yml  test_everything.yml
hexpng/: Cargo.toml  README.md
hexpng/src/: crc32.rs  crc_table.rs  lib.rs
miscutils_server/: Cargo.toml
miscutils_server/src/: lib.rs  main.rs
miscutils_server/src/html/: 404.html  index.html
